# agent-watch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  PRIVACY.md  README.md  SECURITY.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
cursor-extension/: .vscodeignore  LICENSE  README.md  extension.js  package.json  protocol.js
cursor-extension/test/: extension.test.js  protocol.test.js
docs/: README.zh-CN.md  showcase.html
scripts/: agent-watch  package_cursor_extension.py  render-demo.py
src/agent_watch/: __init__.py  __main__.py  core.py  dashboard.py  persistence.py  processes.py  resume.py
systemd/: agent-watch.service
tests/: test_agent_watch.py  test_cursor_extension_package.py  test_cursor_notify.py  test_dashboard.py  test_persistence.py  test_processes.py  test_security_release.py
